Firefox compatibility fix: text-wrap
As in https://caniuse.com/?search=text-wrap
text-wrap property is not used in currently most
popular Firefox versions, let's change it to
more popular white-space property.

It fixed wrapping of text in statusbar in Firefox

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -1864,7 +1864,7 @@ input[type='number']:hover::-webkit-outer-spin-button {
 	grid-column: 1;
 	grid-row: 1;
 	white-space: pre-wrap;
-	text-wrap: wrap;
+	white-space: wrap;
 }
 
 .ui-custom-textarea-cursor-layer {
